clusters/home/default/navidrome/99-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome-deployment
  namespace: default
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: navidrome
        image: ghcr.io/navidrome/navidrome:0.50.0
        ports:
        - containerPort: 4533
          protocol: TCP
        volumeMounts:
        - name: navidrome-data
          mountPath: /data
        - name: navidrome-music
          mountPath: /music
        livenessProbe:
          httpGet:
            path: /
            port: 4533
          initialDelaySeconds: 500
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 5
        resources:
          requests:
            memory: "128Mi"

      nodeSelector:
        disk: ssd
      volumes:
      - name: navidrome-data
        hostPath:
          path: /mnt/shared_data/k8s/navidrome/data
      - name: navidrome-music
        hostPath:
          path: /mnt/shared_data/k8s/navidrome/music

---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: default
  labels:
    app: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - name: panel
      protocol: TCP
      port: 80
      targetPort: 4533
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: navidrome.kokev.de
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: navidrome-service
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - navidrome.kokev.de
      secretName: kokev-wildcard-tls
